--- a/Ropa/Base.lproj/Main.storyboard
+++ b/Ropa/Base.lproj/Main.storyboard
@@ -340,7 +340,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tJ6-uE-2Zg">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="375" id="HZn-O9-CIs"/>
@@ -414,6 +414,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="XUF-FL-eh3" kind="relationship" relationship="viewControllers" id="2Xd-En-wVV"/>
+                        <segue destination="CqM-l9-cUe" kind="relationship" relationship="viewControllers" id="JCO-Uz-Svb"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Ar-f0-o5G" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -422,6 +423,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="JCO-Uz-Svb"/>
         <segue reference="cvO-6X-Afz"/>
     </inferredMetricsTieBreakers>
 </document>
